# FreeMobileApp

./: .env  .env.example  .gitignore  AUDIT_REPORT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_README.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  EXECUTE_NOW.md  FINAL_DEPLOYMENT_SUMMARY.md  GITHUB_SECRETS_CONFIG.md  GITHUB_SECRETS_SETUP.md  LICENSE  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_READY.md  PRODUCTION_SETUP.md  PROMPT CURSOR.txt  QUICK_DEPLOY_STEPS.md  QUICK_START.md  README.md  README_DEPLOY_NOW.txt  REQUIREMENTS_GUIDE.md  SETUP_LOCAL.md  SSH_SETUP_WINDOWS.md  STREAMLIT_CLOUD_DEPLOYMENT.md  check_system.py  deploy.ps1  deploy.sh  deploy_lightsail.sh  deploy_now.bat  deploy_production.bat  ecosystem.config.js  fix_deployment_issues.py  freemobileapp.db  generate_final_dataset.py  generate_training_dataset.py  pyproject.toml  requirements-ci.txt  requirements-streamlit.txt  (+16 more)
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
.streamlit/: config.toml  secrets.toml.example
backend/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  railway.json  requirements.txt  schemas.py  security.py
backend/routers/: auth.py
data/ground_truth/: test_set.csv
data/training/: train_dataset_enriched.csv  train_dataset_enriched_kpi_stats.json
docs/: .gitignore  AUDIT_SUMMARY.txt  CHECKLIST_DEPLOYMENT.md  CORRECTIONS_GEMINI_VISUALISATIONS.txt  DEPENDENCIES_GUIDE.txt  DEPLOYMENT_GUIDE.txt  LIGHTSAIL_DEPLOYMENT.md  STREAMLIT_CLOUD_SETUP.txt  deploy.sh  deploy_production.sh  dvc.yaml  params.yaml  pyproject.toml  requirements-academic.txt  requirements.production.txt  requirements.txt  start.ps1  start_application.bat  start_application.sh
models/prompts/: v1_baseline.txt  (+1 more)
scripts/: deploy.sh
streamlit_app/: app.py  config.py  requirements.txt
test_results/: MANUAL_UI_TEST_CHECKLIST.txt  QUICK_TEST_REFERENCE.txt  TEST_EXECUTION_SUMMARY.md  provider_test_20251115_234650.json
tests/: GUIDE_COMPLET_PLAYWRIGHT.md  README_PLAYWRIGHT_TESTS.md  git_setup_finalization.json  git_validation_report.json  github_commit_verification.json  quick_test.py  setup_and_run_tests.ps1  streamlit_deployment_report.json  test_advanced_nlp.py  test_html_validation_playwright.py  test_modern_ui.py  test_nlp_features_playwright.py  test_stability_check.py  test_streamlit_deployment.py  validate_functions.py  verify_port_consistency.py
(+32 files in other folders)
